# turndown.cpp

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-wheels.yml  release.yml
cli/: CMakeLists.txt  main.cpp
cmake/: FindGumbo.cmake  FindLexbor.cmake  FindTidy.cmake  turndown_cpp-config.cmake.in
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  cli_plugin.h  collapse_whitespace.h  commonmark_rules.h  dom_adapter.h  dom_concepts.h  dom_source.h  gumbo_adapter.h  lexbor_adapter.h  libxml2_adapter.h  node.h  rules.h  tidy_adapter.h  turndown.h  utf8_helpers.h  utilities.h
python/: CMakeLists.txt
python/src/: bindings.cpp
python/tests/: test_basic.py
src/: CMakeLists.txt  collapse_whitespace.cpp  commonmark_rules.cpp  dom_adapter.cpp  dom_source.cpp  gumbo_adapter.cpp  lexbor_adapter.cpp  libxml2_adapter.cpp  node.cpp  rules.cpp  tidy_adapter.cpp  turndown.cpp  utilities.cpp
test/: CMakeLists.txt  cli_plugin_test.cpp  cli_sample_plugin.cpp  cli_test.cpp  internals_test.cpp  turndown_index_test.cpp  turndown_test.cpp
test/install_test/: CMakeLists.txt  main.cpp
