[build-system]
requires = [
  "scikit-build-core>=0.11",
  "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "turndown"
version = "0.1.0"
description = "HTML to Markdown converter (turndown.cpp) with Python bindings"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

[tool.scikit-build]
cmake.args = [
  "-DTURNDOWN_BUILD_PYTHON=ON",
  "-DTURNDOWN_PARSER_BACKEND=libxml2",
  "-DTURNDOWN_BUNDLE_LIBXML2=ON",
  "-DTURNDOWN_BUILD_TESTING=OFF",
  "-DTURNDOWN_BUILD_CLI=OFF",
  "-DTURNDOWN_BUILD_EXAMPLES=OFF",
  "-DTURNDOWN_BUILD_BENCHMARKS=OFF",
  "-DTURNDOWN_BUILD_DOCS=OFF",
  "-DBUILD_SHARED_LIBS=OFF",
]

# This project ships a top-level extension module named `turndown` (no pure-Python package).
wheel.packages = []

[tool.scikit-build.install]
components = ["python"]
